[gd_scene load_steps=8 format=3 uid="uid://cen6wewjc8rf4"]

[ext_resource type="Script" path="res://scripts/GameEnd.gd" id="2_h72ji"]
[ext_resource type="LabelSettings" uid="uid://e0k3cxu67axl" path="res://themes/game_end_dark_label_settings.tres" id="2_yxtb7"]
[ext_resource type="LabelSettings" uid="uid://cfvuep1y6kmyy" path="res://themes/game_end_light_label_settings.tres" id="3_543fw"]
[ext_resource type="LabelSettings" uid="uid://cvtgaxuldb8dq" path="res://themes/game_end_draw_label_settings.tres" id="4_qa6ym"]

[sub_resource type="Animation" id="Animation_3jp2e"]
resource_name = "game_end_in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scrim:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.690196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/TitleContainer/Title:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, -64), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/TitleContainer/Title:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/Divider:custom_minimum_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.25),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(450, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Container/LightPointsContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Container/LightPointsContainer:custom_minimum_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.25, 1.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 35)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Container/LightPointsContainer/LightPoints:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.25, 1.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Container/DarkPointsContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Container/DarkPointsContainer:custom_minimum_size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.5, 1.75),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 35)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Container/DarkPointsContainer/DarkPoints:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.5, 1.75),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Container/MainMenuButtonContainer:custom_minimum_size")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(2.5, 2.75),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 48)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Container/MainMenuButtonContainer/MainMenuButton:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(2.65, 2.9),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jajii"]
_data = {
"game_end_in": SubResource("Animation_3jp2e")
}

[sub_resource type="LabelSettings" id="LabelSettings_836fs"]
font_size = 25

[node name="GameEnd" type="Control"]
z_index = 11
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_h72ji")
dark_label_settings = ExtResource("2_yxtb7")
light_label_settings = ExtResource("3_543fw")
draw_label_settings = ExtResource("4_qa6ym")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jajii")
}

[node name="Scrim" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.690196)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"ScrimPanel"

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleContainer" type="Control" parent="Container"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="Title" type="Label" parent="Container/TitleContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "LIGHT VICTORY"
horizontal_alignment = 1

[node name="Divider" type="Control" parent="Container"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="HSeparator" type="HSeparator" parent="Container/Divider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Padding" type="Control" parent="Container"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="LightPointsContainer" type="Control" parent="Container"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
mouse_filter = 1

[node name="LightPoints" type="Label" parent="Container/LightPointsContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Light: 0 points
"
label_settings = SubResource("LabelSettings_836fs")
horizontal_alignment = 1

[node name="DarkPointsContainer" type="Control" parent="Container"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
mouse_filter = 1

[node name="DarkPoints" type="Label" parent="Container/DarkPointsContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Dark: 0 points
"
label_settings = SubResource("LabelSettings_836fs")
horizontal_alignment = 1

[node name="Padding2" type="Control" parent="Container"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 1

[node name="MainMenuButtonContainer" type="Control" parent="Container"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="Container/MainMenuButtonContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
offset_left = 528.0
offset_right = 624.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
text = "Main Menu"

[node name="AnimationTimer" type="Timer" parent="."]

[connection signal="pressed" from="Container/MainMenuButtonContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
